@@ -21,16 +21,16 @@
  * \ingroup referenceletters
  * \brief referenceletters for numbering referenceletters
  */
-
 require_once '../class/commondocgeneratorreferenceletters.class.php';
 
 /**
  * \class ModelePDFReferenceLetters
  * \brief Absctart class for ReferenceLetters module
  */
-abstract class ModelePDFReferenceLetters extends CommonDocGeneratorReferenceLetters {
+abstract class ModelePDFReferenceLetters extends CommonDocGeneratorReferenceLetters
+{
 	var $error = '';
-
+	
 	/**
 	 * Return list of active generation modules
 	 *
@@ -40,12 +40,12 @@ abstract class ModelePDFReferenceLetters extends CommonDocGeneratorReferenceLett
 	 */
 	static function liste_modeles($db, $maxfilenamelength = 0) {
 		global $conf;
-
+		
 		$type = 'referenceletters';
 		$liste = array ();
-
-		$liste [] = 'referenceletters';
-
+		
+		$liste[] = 'referenceletters';
+		
 		return $liste;
 	}
 }
@@ -55,77 +55,68 @@ abstract class ModelePDFReferenceLetters extends CommonDocGeneratorReferenceLett
  */
 abstract class ModeleNumRefrReferenceLetters
 {
-
 	var $error = '';
-
+	
 	/**
 	 * Return if a module can be used or not
 	 *
 	 * @return boolean true if module can be used
 	 */
-	function isEnabled()
-	{
+	function isEnabled() {
 		return true;
 	}
-
+	
 	/**
 	 * Renvoi la description par defaut du modele de numerotation
 	 *
 	 * @return string Texte descripif
 	 */
-	function info()
-	{
+	function info() {
 		global $langs;
 		$langs->load("referenceletters@referenceletters");
 		return $langs->trans("NoDescription");
 	}
-
+	
 	/**
 	 * Renvoi un exemple de numerotation
 	 *
 	 * @return string Example
 	 */
-	function getExample()
-	{
+	function getExample() {
 		global $langs;
 		$langs->load("referenceletters");
 		return $langs->trans("NoExample");
 	}
-
+	
 	/**
 	 * Test si les numeros deja en vigueur dans la base ne provoquent pas de
 	 * de conflits qui empechera cette numerotation de fonctionner.
 	 *
 	 * @return boolean false si conflit, true si ok
 	 */
-	function canBeActivated()
-	{
+	function canBeActivated() {
 		return true;
 	}
-
+	
 	/**
 	 * Renvoi prochaine valeur attribuee
 	 *
-	 * @param int $fk_user
-	 *        	user creating
-	 * @param Societe $objsoc
-	 *        	party
-	 * @param Lead $lead        	
+	 * @param int $fk_user user creating
+	 * @param Societe $objsoc party
+	 * @param Lead $lead
 	 * @return string Valeur
 	 */
-	function getNextValue($fk_user, $objsoc, $lead)
-	{
+	function getNextValue($fk_user, $objsoc, $lead) {
 		global $langs;
 		return $langs->trans("NotAvailable");
 	}
-
+	
 	/**
 	 * Renvoi version du module numerotation
 	 *
 	 * @return string Valeur
 	 */
-	function getVersion()
-	{
+	function getVersion() {
 		global $langs;
 		$langs->load("admin");
 		
@@ -139,54 +130,75 @@ abstract class ModeleNumRefrReferenceLetters
 	}
 }
 
-
 /**
- *  Create a document onto disk according to template module.
+ * Create a document onto disk according to template module.
  *
- * 	@param	    DoliDB		$db  			 Database handler
- * 	@param	    object		$object			 Object proposal
- * 	@param	    object		$instance_letter Instance letter
- * 	@param		Translate	$outputlangs	 Object langs to use for output
- *  @param      string		$element_type    element type
- * 	@return     int         				0 if KO, 1 if OK
+ * @param DoliDB $db Database handler
+ * @param object $object Object proposal
+ * @param object $instance_letter Instance letter
+ * @param Translate $outputlangs Object langs to use for output
+ * @param string $element_type element type
+ * @return int 0 if KO, 1 if OK
  */
-function referenceletters_pdf_create($db, $object, $instance_letter, $outputlangs, $element_type)
-{
-	global $conf,$user,$langs;
-
-	$error=0;
-	$filefound=0;
+function referenceletters_pdf_create($db, $object, $instance_letter, $outputlangs, $element_type) {
+	global $conf, $user, $langs;
+	
+	$error = 0;
+	$filefound = 0;
 	// Search template files
-	$file=dol_buildpath('/referenceletters/core/modules/referenceletters/pdf/pdf_rfltr_'.$element_type.'.modules.php');
+	$file = dol_buildpath('/referenceletters/core/modules/referenceletters/pdf/pdf_rfltr_' . $element_type . '.modules.php');
 	if (file_exists($file)) {
-		$filefound=1;
+		$filefound = 1;
 	}
-
-	$classname='pdf_rfltr_'.$element_type; 
-
+	
+	$classname = 'pdf_rfltr_' . $element_type;
+	
 	// Charge le modele
-	if ($filefound)
-	{
+	if ($filefound) {
 		require_once $file;
-
+		
 		$obj = new $classname($db);
-
+		
 		// We save charset_output to restore it because write_file can change it if needed for
 		// output format that does not support UTF8.
-		if ($obj->write_file($object, $instance_letter, $outputlangs) > 0)
-		{
+		if ($obj->write_file($object, $instance_letter, $outputlangs) > 0) {
 			return 1;
+		} else {
+			setEventMessage('referenceletters_pdf_create Error: ' . $obj->error, 'errors');
+			return - 1;
 		}
-		else
-		{
-			setEventMessage('referenceletters_pdf_create Error: '.$obj->error, 'errors');
-			return -1;
-		}
-
+	} else {
+		setEventMessage($langs->trans("Error") . " " . $langs->trans("ErrorFileDoesNotExists", $file), 'errors');
+		return - 1;
 	}
-	else
-	{
-		setEventMessage($langs->trans("Error")." ".$langs->trans("ErrorFileDoesNotExists",$file), 'errors');
-		return -1;
+}
+
+/**
+ * 
+ * @param unknown $pdf
+ * @param unknown $outputlangs
+ * @param unknown $id
+ */
+function importImageBackground(&$pdf, $outputlangs, $id) {
+	global $conf;
+	if (empty($conf->global->MAIN_DISABLE_FPDI)) {
+		
+		require_once DOL_DOCUMENT_ROOT.'/core/lib/files.lib.php';
+		
+		// add doc from attached files of training
+		$upload_dir = $conf->referenceletters->dir_output . "/referenceletters/" . $id;
+		$filearray = dol_dir_list($upload_dir, "files", 0, '\.pdf$', '\.meta$', $sortfield, (strtolower($sortorder) == 'desc' ? SORT_DESC : SORT_ASC), 1);
+		if (is_array($filearray) && count($filearray) > 0) {
+			//Take first PDF file added
+			$filedetail = reset($filearray);
+			if (file_exists($filedetail['fullname'])) {
+				$count = $pdf->setSourceFile($filedetail['fullname']);
+				// import all page
+				//for($i = 1; $i <= $count; $i ++) {
+					$tplIdx = $pdf->importPage(1);
+					$pdf->useTemplate($tplIdx);
+				//}
+			}
+		}
 	}
 }
