@@ -96,3 +96,5 @@ RefLtrAddPageBreak=Añadir un salto de página
 RefLtrPageBreak=Salto de página
 RefLtrDoc=Document
 RefLtrErrorCopyFile=Error during copying letter PDF into event
+RefLtrBackground=Background image
+RefLtrBackgroundHelp=Only PDF files will be use for backgound, and only first on will be use. Link (URL) will be ignore
